kubernetes/environments/prod/apps/openproject/service.yaml
---
# OpenProject Web Service (PROD)
apiVersion: v1
kind: Service
metadata:
  name: openproject-web
  namespace: openproject
  labels:
    app.kubernetes.io/name: openproject
    app.kubernetes.io/component: web
    app.kubernetes.io/managed-by: argocd
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: openproject
    app.kubernetes.io/component: web
