kubernetes/environments/prod/apps/openproject/ingress.yaml
---
# IngressRoute fuer OpenProject (PROD)
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: openproject
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`openproject.eneg.de`) && PathPrefix(`/hocuspocus`)
      kind: Rule
      services:
        - name: openproject-hocuspocus
          namespace: openproject
          port: 1234
    - match: Host(`openproject.eneg.de`)
      kind: Rule
      services:
        - name: openproject-web
          namespace: openproject
          port: 8080
  tls:
    secretName: openproject-tls
